--- a/package.json
+++ b/package.json
@@ -7,16 +7,16 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
     "build": "nuxt build",
-    "start": "cross-env NODE_ENV=production node server/index.js",
+    "start": "cross-env PORT=8080 NODE_ENV=production node server/index.js",
     "generate": "nuxt generate"
   },
   "dependencies": {
     "nuxt": "^1.0.0",
+    "cross-env": "^5.0.1",
     "express": "^4.15.3",
     "@nuxtjs/axios": "^5.0.0"
   },
   "devDependencies": {
-    "cross-env": "^5.0.1",
     "nodemon": "^1.11.0"
   }
 }
